--- a/src/es11/index.html
+++ b/src/es11/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <button id="b">Click</button>
-    <script type="module" src="./06-dynamic-import.js"></script>
+    <script type="module" src="06-dynamic-import.js"></script>
 </body>
 </html>
